# audio

./: .gitignore  AudActionLog.cpp  AudAlloc.h  AudConfig.cpp  AudConfig.h  AudConfig_Blue.cpp  AudConstants.cpp  AudConstants.h  AudEmitter.cpp  AudEmitter.h  AudEmitterDoppler.cpp  AudEmitterDoppler.h  AudEmitterDoppler_Blue.cpp  AudEmitterMulti.cpp  AudEmitterMulti.h  AudEmitterMulti_Blue.cpp  AudEmitterPersisted.cpp  AudEmitterPersisted.h  AudEmitterPersisted_Blue.cpp  AudEmitter_Blue.cpp  AudEventCurve.cpp  AudEventCurve.h  AudEventKey_Blue.cpp  AudGameObjResource.cpp  AudGameObjResource.h  AudGameObjResource_Blue.cpp  AudJukebox.cpp  AudJukebox.h  AudJukebox_Blue.cpp  AudListener.cpp  AudListener.h  AudListener_Blue.cpp  AudLowLevelIO.cpp  AudLowLevelIO.h  AudLowLevelIO_Blue.cpp  AudManager.cpp  AudManager.h  AudManager_Blue.cpp  AudMp3Info.cpp  AudMp3Info.h  (+62 more)
.teamcity/: pom.xml  settings.kts
.teamcity/MacOS/: Project.kt
.teamcity/Windows/: Project.kt
.teamcity/_Self.kt/: Project.kt
.teamcity/_Self.kt/buildTypes/: CreateUniversalBuilds.kt  PublishToPerforce.kt
CCPAudioStream/AudioEngineFX/: CCPFXSrcAudioStream.cpp  CCPFXSrcAudioStream.h  CCPFXSrcAudioStreamParams.cpp  CCPFXSrcAudioStreamParams.h  CCPFXSrcAudioStreamSourceFactory.h
CCPAudioStream/AudioEngineFX/lib/: CCPAudioStreamSource.lib  CCPAudioStreamSource_d.lib  CCPAudioStreamSource_dev.lib
CCPAudioStream/AudioEngineFX/lib/Win32/: CCPAudioStreamSource.lib  CCPAudioStreamSource_d.lib  CCPAudioStreamSource_dev.lib
CCPAudioStream/AudioEngineFX/lib/x64/: CCPAudioStreamSource.lib  CCPAudioStreamSource_d.lib  CCPAudioStreamSource_dev.lib
CCPAudioStream/WwisePlugin/: AudioInputWindows.vcproj  AudioInputWindows.vcxproj  AudioStream.cpp  AudioStream.def  AudioStream.h  AudioStream.rc  AudioStreamPlugin.cpp  AudioStreamPlugin.h  AudioStream_d.def  resource.h
CCPAudioStream/WwisePlugin/Help/: TopicAlias.h
CCPAudioStream/WwisePlugin/res/: AudioStream.xml
CCPAudioStream/include/: CCPAudioStreamSourceFactory.h
Wwise/CarbonAudioTest/: CarbonAudioTest.wcustomproperties  CarbonAudioTest.wproj
Wwise/CarbonAudioTest/Actor-Mixer Hierarchy/: Default Work Unit.wwu
Wwise/CarbonAudioTest/Add-ons/Properties/: ccp.wcustomproperties
Wwise/CarbonAudioTest/Attenuations/: Default Work Unit.wwu
Wwise/CarbonAudioTest/Audio Devices/: Default Work Unit.wwu
Wwise/CarbonAudioTest/Busses/: Default Work Unit.wwu
Wwise/CarbonAudioTest/Containers/: Default Work Unit.wwu
Wwise/CarbonAudioTest/Containers/Music (Migrated)/: Default Work Unit.wwu
Wwise/CarbonAudioTest/Control Surface Sessions/: Default Work Unit.wwu
Wwise/CarbonAudioTest/Conversion Settings/: Default Work Unit.wwu  Factory Conversion Settings.wwu
Wwise/CarbonAudioTest/CustomScripts/: PostGenerationStep.bat
Wwise/CarbonAudioTest/Devices/: Default Work Unit.wwu
Wwise/CarbonAudioTest/Dynamic Dialogue/: Default Work Unit.wwu
Wwise/CarbonAudioTest/Effects/: Default Work Unit.wwu  Factory Effects.wwu
Wwise/CarbonAudioTest/Events/: Default Work Unit.wwu
Wwise/CarbonAudioTest/Game Parameters/: Default Work Unit.wwu
Wwise/CarbonAudioTest/GeneratedSoundBanks/: ProjectInfo.json  ProjectInfo.xml
Wwise/CarbonAudioTest/GeneratedSoundBanks/Windows/: Common.bnk  Common.txt  SoundbanksInfo.json  TestLoop.txt  TestOneShot.txt  TestSoundbank.txt
Wwise/CarbonAudioTest/Interactive Music Hierarchy/: Default Work Unit.wwu
Wwise/CarbonAudioTest/Master-Mixer Hierarchy/: Default Work Unit.wwu
Wwise/CarbonAudioTest/Metadata/: Default Work Unit.wwu
Wwise/CarbonAudioTest/Mixing Sessions/: Default Work Unit.wwu
Wwise/CarbonAudioTest/Modulators/: Default Work Unit.wwu
Wwise/CarbonAudioTest/Presets/: Default Work Unit.wwu  Factory Spatial Audio.wwu
Wwise/CarbonAudioTest/Queries/: Default Work Unit.wwu
Wwise/CarbonAudioTest/Sidechain Mixes/: Default Work Unit.wwu
Wwise/CarbonAudioTest/SoundBanks/: Default Work Unit.wwu
Wwise/CarbonAudioTest/Soundcaster Sessions/: Default Work Unit.wwu
Wwise/CarbonAudioTest/States/: Default Work Unit.wwu
Wwise/CarbonAudioTest/Switches/: Default Work Unit.wwu
Wwise/CarbonAudioTest/Triggers/: Default Work Unit.wwu
Wwise/CarbonAudioTest/Virtual Acoustics/: Default Work Unit.wwu
include/: ITr2AudEmitter.h
python/: __init__.py  package.yaml
python/audio2/: __init__.py  audiomanager.py  package.yaml  waapimanager.py
python/audio2/test/: audiomanager_test.py  base_test_class.py  const.py  run_tests.py  test_audemitter_exposure.py  test_audgameobj_disabled_exposure.py  test_audgameobj_enabled_exposure.py  test_audmanager_exposure.py  test_auduiplayer_exposure.py  test_python_audiomanager.py  utils.py
python/audio2/test/soundbanks/: AudioMetadata.json  Common.bnk  PluginInfo.json  SoundPrioritizationMetadata.json  SoundbanksInfo.json  TestOneShot.bnk  Videoplayer.bnk
python/test/: base_test_class.py  test_audio2_exposure.py  test_audlistener_exposure.py
src/: AudActionLog.cpp  AudActionLog.h  AudActionLog_Blue.cpp  AudConstants.cpp  AudConstants.h  AudEmitter.cpp  AudEmitter.h  AudEmitter_Blue.cpp  AudEventCurve.cpp  AudEventCurve.h  AudEventCurve_Blue.cpp  AudEventKey.cpp  AudEventKey.h  AudEventKey_Blue.cpp  AudGameObjResource.cpp  AudGameObjResource.h  AudGameObjResource_Blue.cpp  AudGeometry.cpp  AudGeometry.h  AudGeometry_Blue.cpp  AudListener.cpp  AudListener.h  AudListener_Blue.cpp  AudManager.cpp  AudManager.h  AudManager_Blue.cpp  AudManager_DebugCones.cpp  AudMusicPlayer.cpp  AudMusicPlayer.h  AudMusicPlayer_Blue.cpp  AudObstruction.cpp  AudObstruction.h  AudObstructionOcclusion.cpp  AudObstructionOcclusion.h  AudParameter.cpp  AudParameter.h  AudParameter_Blue.cpp  AudPosition.cpp  AudPosition.h  AudPosition_Blue.cpp  (+33 more)
src/Components/: StretchAudio.cpp  StretchAudio.h  StretchAudio_Blue.cpp
src/LowLevelIO/: AudPathResolver.cpp  AudPathResolver.h  FileHelpers.h  LowLevelIOHook.cpp  LowLevelIOHook.h
src/WAAPI/: WaapiManager.cpp  WaapiManager.h  WaapiManager_Blue.cpp
tests/python/: discover.py
tests/python/audiotests/: __init__.py  __main__.py  base_test_class.py  debug_utils.py  utils.py
(+39 files in other folders)
